# bevy

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  index.html
.cargo/: config.toml
examples/: 2d-shapes.rs  bug.rs  camera.rs  egui.rs  egui_inspector.rs  foo.rs  observer.rs  playground.rs  state_substate.rs
package/project/foo/: Cargo.toml
package/project/mahjong/: Cargo.toml  README.md  Trunk.toml  err.md  index.html
package/project/mahjong/asset/atlas/: 128x128.kra  384.kra  384x384.kra  x256.bak.kra  x256.kra  x384.bak.kra  x384.kra
package/project/mahjong/asset/misc/: back.kra  border.kra  border~000.kra  border~001.kra
package/project/mahjong/asset/misc/rev2/: Alliance.kra  Arthas_LichKing.kra  Ashbringer.kra  Blades.kra  Frostmourne.kra  Hearthstone.kra  Horde.kra  StoneSlab.kra  Tile.kra  Tile~000.kra  Tile~001.kra  Tile~002.kra  Tile~003.kra  button-atlas_1998x429.kra  button_666x429.kra
package/project/mahjong/asset/misc/rev2/original/: Tile2.kra  Tile2_001.kra  Tile2_002.kra  Tile2_003.kra
package/project/mahjong/asset/riichi_mahjong_tiles/: LICENSE.md  README.md  commit.md
package/project/mahjong/asset/ui/: .button.kra-autosave.kra  128x128.kra  atlas.kra  button.kra
package/project/mahjong/examples/: observer.rs  state_substate.rs
package/project/mahjong/src/: main.rs
package/project/mahjong/src/plugin/: camera.rs  default.rs  external.rs  game.rs  global.rs  input.rs  mod.rs  tile.rs  util.rs
package/project/mahjong/src/plugin/scene/: greeter.rs  mod.rs
package/project/mahjong/src/plugin/scene/a/: mod.rs
package/project/mahjong/src/plugin/scene/in_game/: grid.rs  mod.rs  old  old2.rs
package/project/mahjong/src/plugin/scene/main_menu/: about.rs  mod.rs
package/project/mahjong/src/plugin/scene/running/: mod.rs
package/project/mahjong/src/plugin/screen/: greeter.rs  in_game.rs  menu.rs  mod.rs
package/project/mahjong/src/plugin/screen/menu/: mod.rs  root.rs
package/project/mahjong/src/plugin/shared/: component.rs  event.rs  mod.rs  resource.rs  system.rs  util.rs
package/project/mahjong/tool/: krita_atlas_helper.py
src/: constants.rs  lib.rs
src/plugins/: initialize.rs  misc.rs  mod.rs  ui.rs
