[workspace]
resolver = "3"
members = [
    "package/project/*"
]

[workspace.package]
authors = ["Marcus Hanson"]
categories = ["game"]
description = "Nevy"
edition = "2024"
homepage = "https://github.com/marcerhans/bevy"
keywords = ["nevy"]
license-file = "LICENCE.md"
publish = false
readme = "README.md"
repository = "https://github.com/marcerhans/bevy"
version = "0.1.0"

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["wayland"] }
bevy-inspector-egui = { version = "0.31.0" }
bevy_enhanced_input = { version = "0.18.0" }
avian2d = { version = "0.3.1" }
avian3d = { version = "0.3.1" }

# Lower the max log limit (performance)
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# This workspace root package exists purely to run examples
[package]
name = "examples"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_enhanced_input = { workspace = true }
avian2d = { workspace = true }

[features]
debug = ["bevy/dynamic_linking"] # Use for debug/dev builds. Faster compile times.