[workspace]
resolver = "3"
members = [
    "package/project/*"
]

[workspace.package]
authors = ["Marcus Hanson"]
categories = ["game"]
description = "Nevy"
edition = "2024"
homepage = "https://github.com/marcerhans/bevy"
keywords = ["nevy"]
license-file = "LICENCE.md"
publish = false
readme = "README.md"
repository = "https://github.com/marcerhans/bevy"
version = "0.1.0"

[workspace.dependencies]
bevy = { version = "0.17.1", features = ["wayland"] }
bevy-inspector-egui = { version = "0.35.0" }
avian2d = { version = "0.4.0" }
avian3d = { version = "0.4.0" }
rand = { version = "0.9.2" }
bevy_tweening = { version = "0.14.0" }

# Lower the max log limit (performance)
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Release profile for WASM targets
# THIS IS USED FOR TRUNK - Trunk uses whatever the release flag is (which also happens to be wasm target).
[target.wasm32-unknown-unknown.profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "debuginfo"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
# THIS IS NOT USED FOR TRUNK, ONLY WASM-SERVER-RUNNER in config.toml.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# This workspace root package exists purely to run examples
[package]
name = "examples"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
avian2d = { workspace = true }

[features]
debug = ["bevy/dynamic_linking"] # Use for debug/dev builds. Faster compile times.