[package]
name = "foo"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true, features = ["2d"] }
avian2d = { workspace = true }
rand = { workspace = true }

[features]
debug = [
    "bevy/dynamic_linking",
]
