[package]
name = "mahjong"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_enhanced_input = { workspace = true }
avian2d = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[features]
debug = ["bevy/dynamic_linking"] # Use for debug/dev builds. Faster compile times.