[package]
name = "mahjong"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
bevy-inspector-egui = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[features]
debug = ["bevy/dynamic_linking"] # Use for debug/dev builds. Faster compile times.