[package]
name = "mahjong"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true, features = ["jpeg"] }
rand = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_tweening = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[features]
debug = [
    "bevy/dynamic_linking",
] # Use for debug/dev builds. Faster compile times.
